// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultUnlocker reducer handles actions - setUnlocking 1`] = `
Immutable.VaultUnlockerState {
  "password": "",
  "unlocking": true,
  "passwordVisible": false,
}
`;

exports[`VaultUnlocker reducer handles actions clearUnlocker 1`] = `
Immutable.VaultUnlockerState {
  "password": "",
  "unlocking": false,
  "passwordVisible": false,
}
`;

exports[`VaultUnlocker reducer handles actions setPassword 1`] = `
Immutable.VaultUnlockerState {
  "password": "test password",
  "unlocking": false,
  "passwordVisible": false,
}
`;

exports[`VaultUnlocker reducer handles epics unlockVault generates critical errors 1`] = `"unlock error"`;

exports[`VaultUnlocker reducer handles epics unlockVault unlocks the vault 1`] = `
Array [
  Array [
    Object {
      "masterPassword": "test password",
      "network": "testnet",
    },
  ],
]
`;
